# LightPcapNg

./: CMakeLists.txt  README
include/: light_blocks.h  light_pcapng.h  light_types.h  light_util.h
src/: CMakeLists.txt  light_blocks.c  light_pcapng.c  light_pcapng_ext.c
src/python/: CMakeLists.txt  light_pcapng.cpp  light_pcapng.hpp  light_pcapng_fileinfo.cpp  light_pcapng_fileinfo.hpp
src/tests/: CMakeLists.txt  test_read_packets.c  test_read_write_packets.c
